# MemNixFS

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml  wiki.yml
docs/features/: process-enumeration.md
src/api/: lmpfs.cpp  lmpfs.h  lmpfs_plugin.h  vmmdll_compat.cpp  vmmdll_compat.h
src/app/: engine.cpp  engine.h
src/arch/x86_64/: page_cache.cpp  page_cache.h  paging.cpp  paging.h
src/cli/: main.cpp
src/core/: error.h  log.cpp  log.h  stream.h  types.h
src/formats/: avml_format.cpp  format_factory.cpp  format_factory.h  kdump_format.cpp  lime_format.cpp  phys_raw_stream.h  physical_layer.h  raw_format.cpp
src/io/: file_memory_source.cpp  memory_source.h  mmap_memory_source.cpp
src/mount/: fuse_mount.cpp  winfsp_mount.cpp
src/os/linux/: av_edr.cpp  av_edr.h  banner_scan.cpp  banner_scan.h  bash_history.cpp  bash_history.h  btf_probe.cpp  btf_probe.h  check_syscall.cpp  check_syscall.h  crash_journal.cpp  crash_journal.h  csv_export.cpp  csv_export.h  dentry_path.cpp  dentry_path.h  dmesg.cpp  dmesg.h  dtb_resolver.cpp  dtb_resolver.h  ebpf.cpp  ebpf.h  elf_core.cpp  elf_core.h  elf_core_stream.cpp  elf_core_stream.h  entropy.cpp  entropy.h  fdtable.cpp  fdtable.h  findevil.cpp  findevil.h  forensic_snapshot.cpp  forensic_snapshot.h  integrity_checks.cpp  integrity_checks.h  json_export.cpp  json_export.h  kern_va_stream.cpp  kern_va_stream.h  (+43 more)
src/symbols/: btf_to_isf.cpp  btf_to_isf.h  isf_symbols.cpp  isf_symbols.h  kallsyms.cpp  kallsyms.h  symbol_cache_http.cpp  symbol_cache_http.h  symbol_resolver.cpp  symbol_resolver.h  xz_decompress.cpp  xz_decompress.h
src/vfs/: forensic_warmer.cpp  forensic_warmer.h  proc_module.cpp  sys_module.cpp  sys_module.h  vfs.cpp  vfs.h
tests/c_api/: c_api_smoke.cpp  sample_plugin.cpp  vmmdll_smoke.cpp
tests/unit/: banner_scan_test.cpp  findevil_indicators_test.cpp  recovered_file_stats_test.cpp  shell_history_test.cpp
tools/: fetch_symbols.sh
